test/core/e2e/multi-acct-flow-acct-2.integ.snapshot/aws-cdk-vpclattice-e2e-multi-acct-2.template.json
{
 "Resources": {
  "ClientVPC9BBAC0E1": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-cdk-vpclattice-e2e-multi-acct-2/ClientVPC"
     }
    ]
   }
  },
  "ClientVPCPublicSubnet1SubnetFD59F178": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "eu-central-1a",
    "CidrBlock": "10.0.0.0/19",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "aws-cdk-vpclattice-e2e-multi-acct-2/ClientVPC/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "ClientVPC9BBAC0E1"
    }
   }
  },
  "ClientVPCPublicSubnet1RouteTable783DDE25": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-cdk-vpclattice-e2e-multi-acct-2/ClientVPC/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "ClientVPC9BBAC0E1"
    }
   }
  },
  "ClientVPCPublicSubnet1RouteTableAssociation221067BC": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "ClientVPCPublicSubnet1RouteTable783DDE25"
    },
    "SubnetId": {
     "Ref": "ClientVPCPublicSubnet1SubnetFD59F178"
    }
   }
  },
  "ClientVPCPublicSubnet1DefaultRoute09A9F007": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "ClientVPCIGWF105B9C1"
    },
    "RouteTableId": {
     "Ref": "ClientVPCPublicSubnet1RouteTable783DDE25"
    }
   },
   "DependsOn": [
    "ClientVPCVPCGW6B5994D8"
   ]
  },
  "ClientVPCPublicSubnet1EIP7BC29677": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-cdk-vpclattice-e2e-multi-acct-2/ClientVPC/PublicSubnet1"
     }
    ]
   }
  },
  "ClientVPCPublicSubnet1NATGatewayB83F6E86": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "ClientVPCPublicSubnet1EIP7BC29677",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "ClientVPCPublicSubnet1SubnetFD59F178"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-cdk-vpclattice-e2e-multi-acct-2/ClientVPC/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "ClientVPCPublicSubnet1DefaultRoute09A9F007",
    "ClientVPCPublicSubnet1RouteTableAssociation221067BC"
   ]
  },
  "ClientVPCPublicSubnet2SubnetF0A0A352": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "eu-central-1b",
    "CidrBlock": "10.0.32.0/19",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "aws-cdk-vpclattice-e2e-multi-acct-2/ClientVPC/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "ClientVPC9BBAC0E1"
    }
   }
  },
  "ClientVPCPublicSubnet2RouteTable2C374B0E": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-cdk-vpclattice-e2e-multi-acct-2/ClientVPC/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "ClientVPC9BBAC0E1"
    }
   }
  },
  "ClientVPCPublicSubnet2RouteTableAssociation6DD83576": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "ClientVPCPublicSubnet2RouteTable2C374B0E"
    },
    "SubnetId": {
     "Ref": "ClientVPCPublicSubnet2SubnetF0A0A352"
    }
   }
  },
  "ClientVPCPublicSubnet2DefaultRoute2D866838": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "ClientVPCIGWF105B9C1"
    },
    "RouteTableId": {
     "Ref": "ClientVPCPublicSubnet2RouteTable2C374B0E"
    }
   },
   "DependsOn": [
    "ClientVPCVPCGW6B5994D8"
   ]
  },
  "ClientVPCPublicSubnet3SubnetC8BE0921": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "eu-central-1c",
    "CidrBlock": "10.0.64.0/19",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "aws-cdk-vpclattice-e2e-multi-acct-2/ClientVPC/PublicSubnet3"
     }
    ],
    "VpcId": {
     "Ref": "ClientVPC9BBAC0E1"
    }
   }
  },
  "ClientVPCPublicSubnet3RouteTable665A10C7": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-cdk-vpclattice-e2e-multi-acct-2/ClientVPC/PublicSubnet3"
     }
    ],
    "VpcId": {
     "Ref": "ClientVPC9BBAC0E1"
    }
   }
  },
  "ClientVPCPublicSubnet3RouteTableAssociation6A9BA05A": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "ClientVPCPublicSubnet3RouteTable665A10C7"
    },
    "SubnetId": {
     "Ref": "ClientVPCPublicSubnet3SubnetC8BE0921"
    }
   }
  },
  "ClientVPCPublicSubnet3DefaultRoute0E358C19": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "ClientVPCIGWF105B9C1"
    },
    "RouteTableId": {
     "Ref": "ClientVPCPublicSubnet3RouteTable665A10C7"
    }
   },
   "DependsOn": [
    "ClientVPCVPCGW6B5994D8"
   ]
  },
  "ClientVPCPrivateSubnet1SubnetE3E5FFFE": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "eu-central-1a",
    "CidrBlock": "10.0.96.0/19",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "aws-cdk-vpclattice-e2e-multi-acct-2/ClientVPC/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "ClientVPC9BBAC0E1"
    }
   }
  },
  "ClientVPCPrivateSubnet1RouteTableED250F92": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-cdk-vpclattice-e2e-multi-acct-2/ClientVPC/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "ClientVPC9BBAC0E1"
    }
   }
  },
  "ClientVPCPrivateSubnet1RouteTableAssociation18CF7EA9": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "ClientVPCPrivateSubnet1RouteTableED250F92"
    },
    "SubnetId": {
     "Ref": "ClientVPCPrivateSubnet1SubnetE3E5FFFE"
    }
   }
  },
  "ClientVPCPrivateSubnet1DefaultRouteBD99772E": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "ClientVPCPublicSubnet1NATGatewayB83F6E86"
    },
    "RouteTableId": {
     "Ref": "ClientVPCPrivateSubnet1RouteTableED250F92"
    }
   }
  },
  "ClientVPCPrivateSubnet2Subnet9656AFCB": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "eu-central-1b",
    "CidrBlock": "10.0.128.0/19",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "aws-cdk-vpclattice-e2e-multi-acct-2/ClientVPC/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "ClientVPC9BBAC0E1"
    }
   }
  },
  "ClientVPCPrivateSubnet2RouteTable490353D0": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-cdk-vpclattice-e2e-multi-acct-2/ClientVPC/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "ClientVPC9BBAC0E1"
    }
   }
  },
  "ClientVPCPrivateSubnet2RouteTableAssociation1DA4EFC7": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "ClientVPCPrivateSubnet2RouteTable490353D0"
    },
    "SubnetId": {
     "Ref": "ClientVPCPrivateSubnet2Subnet9656AFCB"
    }
   }
  },
  "ClientVPCPrivateSubnet2DefaultRouteC565362F": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "ClientVPCPublicSubnet1NATGatewayB83F6E86"
    },
    "RouteTableId": {
     "Ref": "ClientVPCPrivateSubnet2RouteTable490353D0"
    }
   }
  },
  "ClientVPCPrivateSubnet3SubnetA067E763": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "eu-central-1c",
    "CidrBlock": "10.0.160.0/19",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "aws-cdk-vpclattice-e2e-multi-acct-2/ClientVPC/PrivateSubnet3"
     }
    ],
    "VpcId": {
     "Ref": "ClientVPC9BBAC0E1"
    }
   }
  },
  "ClientVPCPrivateSubnet3RouteTableC8B5E1E2": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-cdk-vpclattice-e2e-multi-acct-2/ClientVPC/PrivateSubnet3"
     }
    ],
    "VpcId": {
     "Ref": "ClientVPC9BBAC0E1"
    }
   }
  },
  "ClientVPCPrivateSubnet3RouteTableAssociationEB86296D": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "ClientVPCPrivateSubnet3RouteTableC8B5E1E2"
    },
    "SubnetId": {
     "Ref": "ClientVPCPrivateSubnet3SubnetA067E763"
    }
   }
  },
  "ClientVPCPrivateSubnet3DefaultRouteBAAFB29B": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "ClientVPCPublicSubnet1NATGatewayB83F6E86"
    },
    "RouteTableId": {
     "Ref": "ClientVPCPrivateSubnet3RouteTableC8B5E1E2"
    }
   }
  },
  "ClientVPCIGWF105B9C1": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-cdk-vpclattice-e2e-multi-acct-2/ClientVPC"
     }
    ]
   }
  },
  "ClientVPCVPCGW6B5994D8": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "ClientVPCIGWF105B9C1"
    },
    "VpcId": {
     "Ref": "ClientVPC9BBAC0E1"
    }
   }
  },
  "ResSGE9E4FDE5": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "aws-cdk-vpclattice-e2e-multi-acct-2/ResSG",
    "GroupName": "client-sg",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": "10.0.0.0/16",
      "Description": "from 10.0.0.0/16:ALL TRAFFIC",
      "IpProtocol": "-1"
     },
     {
      "CidrIp": "169.254.0.0/16",
      "Description": "from 169.254.0.0/16:ALL TRAFFIC",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "ClientVPC9BBAC0E1"
    }
   }
  },
  "Ec2InstanceInstanceRole0047324B": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ec2.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "ManagedPolicyArns": [
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/AmazonSSMManagedInstanceCore"
       ]
      ]
     }
    ],
    "Tags": [
     {
      "Key": "Name",
      "Value": "client-instance"
     }
    ]
   }
  },
  "Ec2InstanceInstanceRoleDefaultPolicy053E367E": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": "vpc-lattice-svcs:Invoke",
       "Effect": "Allow",
       "Resource": "*"
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "Ec2InstanceInstanceRoleDefaultPolicy053E367E",
    "Roles": [
     {
      "Ref": "Ec2InstanceInstanceRole0047324B"
     }
    ]
   }
  },
  "Ec2InstanceInstanceProfileDA451126": {
   "Type": "AWS::IAM::InstanceProfile",
   "Properties": {
    "Roles": [
     {
      "Ref": "Ec2InstanceInstanceRole0047324B"
     }
    ]
   }
  },
  "Ec2InstanceD6444E3D": {
   "Type": "AWS::EC2::Instance",
   "Properties": {
    "AvailabilityZone": "eu-central-1a",
    "IamInstanceProfile": {
     "Ref": "Ec2InstanceInstanceProfileDA451126"
    },
    "ImageId": {
     "Ref": "SsmParameterValueawsserviceamiamazonlinuxlatestamzn2amihvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter"
    },
    "InstanceType": "t3.micro",
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "ResSGE9E4FDE5",
       "GroupId"
      ]
     }
    ],
    "SubnetId": {
     "Ref": "ClientVPCPrivateSubnet1SubnetE3E5FFFE"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "client-instance"
     }
    ],
    "UserData": {
     "Fn::Base64": "\n    #!/bin/bash\n    yum update -y\n    yum install -y jq\n  "
    }
   },
   "DependsOn": [
    "Ec2InstanceInstanceRoleDefaultPolicy053E367E",
    "Ec2InstanceInstanceRole0047324B"
   ]
  },
  "ClientVpcAssociationVpcAssociationc8faec6c7a433ca58448e2b2d62e96b3d904da3391D8B8A5C6": {
   "Type": "AWS::VpcLattice::ServiceNetworkVpcAssociation",
   "Properties": {
    "ServiceNetworkIdentifier": "arn:aws:vpc-lattice:eu-central-1:694275606777:servicenetwork/sn-01d8737493028116d",
    "VpcIdentifier": {
     "Ref": "ClientVPC9BBAC0E1"
    }
   }
  }
 },
 "Parameters": {
  "SsmParameterValueawsserviceamiamazonlinuxlatestamzn2amihvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter": {
   "Type": "AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>",
   "Default": "/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2"
  },
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Outputs": {
  "ClientSsmUrl": {
   "Description": "SSM Session to the client instance where to run test commands",
   "Value": {
    "Fn::Join": [
     "",
     [
      "https://eu-central-1.console.aws.amazon.com/systems-manager/session-manager/",
      {
       "Ref": "Ec2InstanceD6444E3D"
      },
      "?region=eu-central-1"
     ]
    ]
   }
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
